--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "gulp-favicons": "^2.3.1",
     "gulp-gzip": "^1.4.2",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-image": "^5.1.0",
+    "gulp-imagemin": "^7.1.0",
     "gulp-load-plugins": "^2.0.1",
     "gulp-plumber": "^1.2.1",
     "gulp-run": "^1.7.1",
