--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "gulp-csso": "^4.0.1",
     "gulp-favicons": "^2.3.1",
     "gulp-gzip": "^1.4.2",
+    "gulp-ext-replace": "0.3.0",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-load-plugins": "^2.0.1",
