--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "hasha": "^5.1.0",
     "html-loader": "^0.5.5",
     "image-webpack-loader": "^6.0.0",
+    "imagemin-webp": "^5.1.0",
     "is-path-inside": "^3.0.2",
     "merge2": "^1.3.0",
     "mini-css-extract-plugin": "^0.8.0",
