--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/core/index.js",
   "typings": "index.d.ts",
   "license": "MIT",
-  "version": "3.0.0-rc.8",
+  "version": "3.0.0-rc.9",
   "author": {
     "name": "kobezzza",
     "email": "kobezzza@gmail.com",
@@ -29,7 +29,7 @@
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "dependencies": {
-    "@v4fire/core": "^3.14.0",
+    "@v4fire/core": "^3.15.0",
     "escaper": "^3.0.3",
     "eventemitter2": "^6.4.0",
     "fg-loadcss": "^2.1.0",
@@ -45,6 +45,7 @@
     "@types/glob": "^7.1.1",
     "@types/webpack": "^4.41.12",
     "@v4fire/design-system": "git+https://github.com/V4Fire/DesignSystem.git",
+    "arg": "^4.1.3",
     "autoprefixer": "^9.7.6",
     "browserslist": "^4.12.0",
     "camelize": "^1.0.0",
@@ -111,6 +112,8 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
+    "node-static": "^0.7.11",
+    "playwright": "^1.0.1",
     "stlint": "^1.0.62",
     "stlint-v4fire": "^1.0.37",
     "tslint": "^5.20.1"
