--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/core/index.js",
   "typings": "index.d.ts",
   "license": "MIT",
-  "version": "3.0.0-rc.12",
+  "version": "3.0.0-rc.13",
   "author": {
     "name": "kobezzza",
     "email": "kobezzza@gmail.com",
@@ -29,13 +29,14 @@
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "dependencies": {
-    "@v4fire/core": "^3.15.0",
-    "escaper": "^3.0.3",
+    "@v4fire/core": "^3.15.2",
+    "escaper": "^3.0.4",
     "eventemitter2": "^6.4.0",
     "fg-loadcss": "^2.1.0",
     "path-to-regexp": "^3.2.0",
     "requestidlecallback": "^0.3.0",
     "snakeskin": "^7.5.1",
+    "tslib": "^1.12.0",
     "vue": "2.6.10"
   },
   "optionalDependencies": {
