--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@types/fs-extra-promise": "^1.0.9",
     "@types/glob": "^7.1.1",
     "@types/webpack": "^4.41.12",
-    "@v4fire/design-system": "git+https://github.com/V4Fire/DesignSystem.git",
+    "@v4fire/design-system": "^1.23.0",
     "arg": "^4.1.3",
     "autoprefixer": "^9.7.6",
     "browserslist": "^4.12.0",
