--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,3 +53,29 @@ jobs:
 
       - name: Run typescript test
         run: npm run test:typescript
+
+
+  # Run eslint check
+  typescript:
+    runs-on: windows-latest
+
+    strategy:
+      matrix:
+        node-version: [14.1]
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build tsconfig
+        run: npx gulp build:tsconfig
+
+      - name: Run javascript test
+        run: npm run test:eslint
