--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Run components test
         run: npm run test:components
 
+
   # Run typescript check
   typescript:
     runs-on: windows-latest
@@ -56,7 +57,7 @@ jobs:
 
 
   # Run eslint check
-  typescript:
+  eslint:
     runs-on: windows-latest
 
     strategy:
