--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,11 @@
-name: Build
+name: build
 
-on: [pull_request]
+on:
+  push:
+    branches: [master]
+
+  pull_request:
+    branches: [master]
 
 jobs:
 
