--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,10 +2,10 @@ name: build
 
 on:
   push:
-    branches: [master]
+    branches: [master, v3]
 
   pull_request:
-    branches: [master]
+    branches: [master, v3]
 
 jobs:
 
