--- a/package.json
+++ b/package.json
@@ -26,10 +26,15 @@
     "build:file": "gulp build:tsconfig && webpack --public-path",
     "dev": "gulp build:tsconfig && webpack --watch",
     "dev:file": "gulp build:tsconfig && webpack --watch --public-path",
-    "test": "npm run test:typescript && npm run test:components",
+    "test": "npm run test:typescript && npm run test:eslint && npm run test:components",
     "test:eslint": "npx eslint ./config/**/*.js ./build/**/*.js ./src/**/*.js",
     "test:typescript": "node node_modules/@v4fire/typescript-check",
     "test:components": "npx gulp test:components"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm test"
+    }
   },
   "dependencies": {
     "@v4fire/core": "^3.17.3",
@@ -119,6 +124,7 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
+    "husky": "^4.2.5",
     "playwright": "1.0.2",
     "stlint": "^1.0.62",
     "stlint-v4fire": "^1.0.37",
