--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm test"
+      "pre-push": "npm run test:typescript && npm run test:eslint"
     }
   },
   "dependencies": {
