Added support for loading icons to sprite on demand. Removed the iIcon trait

--- a/.pzlrrc
+++ b/.pzlrrc
@@ -5,5 +5,5 @@
   "disclaimer": "disclaimer.txt",
   "dependencies": ["@v4fire/core"],
   "designSystem": "@v4fire/design-system",
-  "assets": {"sprite": "svg"}
+  "assets": {"sprite": "ds/icons"}
 }
