--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "stylus-loader": "^3.0.2",
     "svg-sprite-loader": "^5.0.0",
     "svg-url-loader": "^5.0.0",
+    "svg-transform-loader": "^2.0.13",
     "svgo": "^1.3.2",
     "svgo-loader": "^2.2.1",
     "svgo-sync": "^0.5.1",
