--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "tslib": "2.0.0",
     "vue": "2.6.10"
   },
+  "peerDependencies": {
+    "playwright": "1.0.2"
+  },
   "optionalDependencies": {
     "@pzlr/build-core": "^2.10.2",
     "@pzlr/stylus-inheritance": "^3.1.0",
@@ -125,7 +128,6 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "husky": "^4.2.5",
-    "playwright": "1.0.2",
     "stlint": "^1.0.62",
     "stlint-v4fire": "^1.0.37",
     "tslint": "^5.20.1"
