--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,10 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
-        run: npm ci && npm i playwright --no-save
+        run: npm ci
+
+      - name: Install playwright
+        run: npm i playwright --no-save
 
       - name: Build tsconfig
         run: npx gulp build:tsconfig
