--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "husky": "^4.2.5",
+    "playwright": "1.0.2",
     "stlint": "^1.0.62",
     "stlint-v4fire": "^1.0.37",
     "tslint": "^5.20.1"
