--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,9 @@ jobs:
       matrix:
         node-version: [14.1]
 
+    env:
+      NODE_ENV: production
+
     steps:
       - uses: actions/checkout@v2
 
@@ -25,11 +28,17 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: Use Playwright
+        uses: microsoft/playwright-github-action@v1
+
       - name: Install dependencies
         run: npm ci
 
       - name: Build tsconfig
         run: npx gulp build:tsconfig
+
+      - name: Set env
+        run: export NODE_ENV=development
 
       - name: Run components test
         run: npm run test:components
@@ -42,6 +51,9 @@ jobs:
     strategy:
       matrix:
         node-version: [14.1]
+
+    env:
+      NODE_ENV: production
 
     steps:
       - uses: actions/checkout@v2
@@ -68,6 +80,9 @@ jobs:
     strategy:
       matrix:
         node-version: [14.1]
+
+    env:
+      NODE_ENV: production
 
     steps:
       - uses: actions/checkout@v2
