--- a/package.json
+++ b/package.json
@@ -119,11 +119,11 @@
     "vue-template-compiler": "2.6.10",
     "vue-template-es2015-compiler": "^1.9.1",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.8.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
     "husky": "^4.2.5",
     "playwright": "1.0.2",
     "stlint": "^1.0.62",
