--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/core/index.js",
   "typings": "index.d.ts",
   "license": "MIT",
-  "version": "3.0.0-rc.30",
+  "version": "3.0.0-rc.31",
   "author": {
     "name": "kobezzza",
     "email": "kobezzza@gmail.com",
@@ -38,7 +38,7 @@
   },
   "dependencies": {
     "@v4fire/core": "3.19.0",
-    "escaper": "^3.0.4",
+    "escaper": "3.0.5",
     "eventemitter2": "6.4.1",
     "fg-loadcss": "^2.1.0",
     "path-to-regexp": "^3.2.0",
