--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test": "npm run test:typescript && npm run test:eslint && npm run test:components",
     "test:eslint": "npx eslint ./config/**/*.js ./build/**/*.js ./src/**/*.js",
     "test:typescript": "node node_modules/@v4fire/typescript-check",
-    "test:components": "npx gulp test:components"
+    "test:components": "npx gulp test:components --reinit-browser true"
   },
   "husky": {
     "hooks": {
