--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,18 +26,18 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Get npm cache directory
-        id: npm-cache
+        id: cache
         run: |
           echo "::set-output name=dir::$(npm config get cache)"
       - uses: actions/cache@v2
         with:
-          path: ${{ steps.npm-cache.outputs.dir }}
+          path: ${{ steps.cache.outputs.dir }}
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        if: steps.npm-cache.outputs.cache-hit != 'true'
+        if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
         
       - name: Build tsconfig
@@ -64,20 +64,20 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Get npm cache directory
-        id: npm-cache
+        id: cache
         run: |
           echo "::set-output name=dir::$(npm config get cache)"
       - uses: actions/cache@v2
         with:
-          path: ${{ steps.npm-cache.outputs.dir }}
+          path: ${{ steps.cache.outputs.dir }}
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        if: steps.npm-cache.outputs.cache-hit != 'true'
+        if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
-        
+
       - name: Build tsconfig
         run: npx gulp build:tsconfig
 
@@ -102,18 +102,18 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Get npm cache directory
-        id: npm-cache
+        id: cache
         run: |
           echo "::set-output name=dir::$(npm config get cache)"
       - uses: actions/cache@v2
         with:
-          path: ${{ steps.npm-cache.outputs.dir }}
+          path: ${{ steps.cache.outputs.dir }}
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        if: steps.npm-cache.outputs.cache-hit != 'true'
+        if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
 
       - name: Build tsconfig
