--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/core/index.js",
   "typings": "index.d.ts",
   "license": "MIT",
-  "version": "3.0.0-rc.32",
+  "version": "3.0.0-rc.33",
   "author": {
     "name": "kobezzza",
     "email": "kobezzza@gmail.com",
@@ -37,7 +37,7 @@
     }
   },
   "dependencies": {
-    "@v4fire/core": "3.19.0",
+    "@v4fire/core": "^3.19.2",
     "escaper": "^3.0.4",
     "eventemitter2": "6.4.1",
     "fg-loadcss": "^2.1.0",
