--- a/package.json
+++ b/package.json
@@ -122,12 +122,9 @@
     "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
+    "@v4fire/linters": "^1.1.0",
     "husky": "^4.2.5",
-    "playwright": "1.0.2",
-    "stlint": "^1.0.62",
-    "stlint-v4fire": "^1.0.37",
-    "tslint": "^5.20.1"
+    "nyc": "^15.1.0",
+    "playwright": "1.0.2"
   }
 }
