--- a/package.json
+++ b/package.json
@@ -118,7 +118,8 @@
     "vue-template-compiler": "2.6.10",
     "vue-template-es2015-compiler": "^1.9.1",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "worker-loader": "^2.0.0"
   },
   "devDependencies": {
     "@v4fire/linters": "^1.2.1",
