--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/core/index.js",
   "typings": "index.d.ts",
   "license": "MIT",
-  "version": "3.0.0-rc.58",
+  "version": "3.0.0-rc.59",
   "author": {
     "name": "kobezzza",
     "email": "kobezzza@gmail.com",
@@ -29,7 +29,7 @@
     "test": "npm run test:typescript && npm run test:eslint && npm run test:components",
     "test:eslint": "npx eslint ./config/**/*.js ./build/**/*.js",
     "test:typescript": "node node_modules/@v4fire/typescript-check",
-    "test:components": "npx gulp test:components",
+    "test:components": "npx gulp test:components --test-processes 2",
     "test:components:chrome": "npx gulp test:components --browsers chromium",
     "up": "npm i && npm up && npm audit fix"
   },
@@ -39,7 +39,7 @@
     }
   },
   "dependencies": {
-    "@v4fire/core": "^3.22.5",
+    "@v4fire/core": "^3.23.0",
     "escaper": "^3.0.4",
     "eventemitter2": "6.4.1",
     "fg-loadcss": "^2.1.0",
@@ -128,6 +128,6 @@
     "@v4fire/linters": "^1.5.4",
     "husky": "^4.2.5",
     "nyc": "^15.1.0",
-    "playwright": "^1.2.1"
+    "playwright": "1.2.1"
   }
 }
