--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
 
   # Run components tests
   components:
-    runs-on: macos-latest
+    runs-on: windows-latest
 
     strategy:
       matrix:
