--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "build:file": "gulp build:tsconfig && webpack --public-path",
     "dev": "gulp build:tsconfig && webpack --watch",
     "dev:file": "gulp build:tsconfig && webpack --watch --public-path",
-    "test": "npm run test:typescript && npm run test:eslint && npm run test:components",
+    "test": "npm run test:typescript && npm run test:eslint && npm run test:components && npm run test:jasmine",
     "test:eslint": "npx eslint ./config/**/*.js ./build/**/*.js",
     "test:typescript": "node node_modules/@v4fire/typescript-check",
     "test:components": "npx gulp test:components --test-processes 2",
     "test:components:chrome": "npx gulp test:components --browsers chromium",
+    "test:jasmine": "nyc --reporter=lcov --reporter=text npx jasmine",
     "up": "npm i && npm up && npm audit fix"
   },
   "husky": {
