--- a/package.json
+++ b/package.json
@@ -41,35 +41,34 @@
   "dependencies": {
     "@v4fire/core": "^3.25.1",
     "escaper": "^3.0.4",
-    "eventemitter2": "6.4.1",
-    "fg-loadcss": "^2.1.0",
+    "eventemitter2": "^6.4.3",
     "path-to-regexp": "^3.2.0",
     "requestidlecallback": "^0.3.0",
     "snakeskin": "^7.5.1",
-    "tslib": "2.0.0",
+    "tslib": "2.0.1",
     "vue": "2.6.10"
   },
   "optionalDependencies": {
     "@pzlr/build-core": "^2.10.2",
     "@pzlr/stylus-inheritance": "^3.1.0",
     "@types/fs-extra-promise": "^1.0.9",
-    "@types/glob": "^7.1.1",
+    "@types/glob": "^7.1.3",
     "@types/webpack": "^4.41.12",
     "@v4fire/design-system": "^1.23.0",
     "arg": "^4.1.3",
-    "autoprefixer": "^9.7.6",
-    "browserslist": "^4.12.0",
+    "autoprefixer": "^10.0.0",
+    "browserslist": "^4.14.3",
     "buble": "^0.20.0",
     "camelize": "^1.0.0",
     "collection.js": "^6.7.10",
     "config": "^1.31.0",
-    "copy-dir": "^1.2.0",
+    "copy-dir": "^1.3.0",
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
-    "delay": "^4.3.0",
-    "extract-loader": "^5.0.1",
+    "delay": "^4.4.0",
+    "extract-loader": "^5.1.0",
     "fast-css-loader": "^1.0.2",
-    "file-loader": "^6.0.0",
+    "file-loader": "^6.1.0",
     "fs-extra-promise": "^1.0.1",
     "glob": "^7.1.6",
     "glob-promise": "^3.4.0",
@@ -80,49 +79,50 @@
     "gulp-gzip": "^1.4.2",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^7.1.0",
-    "gulp-load-plugins": "^2.0.3",
+    "gulp-load-plugins": "^2.0.4",
     "gulp-plumber": "^1.2.1",
     "gulp-run": "^1.7.1",
     "hard-source-webpack-plugin": "^0.13.1",
     "hash-files": "^1.1.1",
     "hasha": "^5.2.0",
-    "html-loader": "^1.1.0",
-    "image-webpack-loader": "^6.0.0",
-    "imagemin-webp": "^5.1.0",
+    "html-loader": "^1.3.0",
+    "image-webpack-loader": "^7.0.1",
+    "imagemin-webp": "^6.0.0",
     "is-path-inside": "^3.0.2",
     "merge2": "^1.3.0",
-    "mini-css-extract-plugin": "^0.9.0",
+    "mini-css-extract-plugin": "^0.11.2",
     "monic": "^2.6.0",
     "monic-loader": "^3.0.1",
     "nib": "^1.1.2",
     "node-static": "^0.7.11",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "parallel-webpack": "^2.6.0",
     "path-equal": "^1.1.1",
-    "postcss-loader": "^3.0.0",
+    "postcss": "^8.0.6",
+    "postcss-loader": "^4.0.2",
     "raw-loader": "^4.0.1",
     "snakeskin-loader": "^8.0.1",
     "ss2vue": "^1.1.0",
     "string-dasherize": "^1.0.0",
-    "stylus": "^0.54.7",
+    "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
-    "svg-sprite-loader": "^4.2.7",
-    "svg-url-loader": "^5.0.0",
+    "svg-sprite-loader": "^5.0.0",
+    "svg-url-loader": "^6.0.0",
     "svgo": "^1.3.2",
     "svgo-loader": "^2.2.1",
     "svgo-sync": "^0.5.1",
-    "terser-webpack-plugin": "^2.3.6",
-    "ts-loader": "^8.0.2",
-    "typograf": "^6.11.0",
+    "terser-webpack-plugin": "^4.2.2",
+    "ts-loader": "^8.0.4",
+    "typograf": "^6.11.1",
     "uniconf": "^2.1.1",
     "upath": "^1.2.0",
-    "url-loader": "^2.3.0",
+    "url-loader": "^4.1.0",
     "urlconcat": "0.0.12",
     "vue-template-compiler": "2.6.10",
     "vue-template-es2015-compiler": "^1.9.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "worker-loader": "^2.0.0"
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "worker-loader": "^3.0.2"
   },
   "devDependencies": {
     "@v4fire/linters": "^1.5.8",
