--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: node_js
 node_js: '14' # or another
 
 dist: bionic
+
+# env setup
+services:
+  - xvfb
+
 addons:
   apt:
     packages:
@@ -37,7 +42,6 @@ before_install:
   - "sysctl kernel.unprivileged_userns_clone=1"
   # Launch XVFB
   - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
 
 cache: npm
 
