--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,46 +2,12 @@ name: build
 
 on:
   push:
-    branches: [master, v3]
+    branches: [master]
 
   pull_request:
-    branches: [master, v3]
+    branches: [master]
 
 jobs:
-
-  # Run components tests
-  components:
-    runs-on: windows-latest
-
-    strategy:
-      matrix:
-        node-version: [14.1]
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build tsconfig
-        run: npx gulp build:tsconfig
-
-      - name: Run components test
-        run: npm run test:components
-
-
   # Run typescript check
   typescript:
     runs-on: ubuntu-latest
