Added travis, migrate to PW 1.4.2, change runner in components tests (#411)
* Working on bump PW

* :art:

* :wrench:

* :art: Added render scheme in doc

* :wrench:

* :art: docs

* increase waitForEl timeout

* :rage: update timeout waitForEl once again

* increase timeout once again

* macos latest -> windows latest

* test

* Added build tsconfig

* CI from https://github.com/microsoft/playwright/blob/master/docs/ci.md#travis-ci

* :wrench:

* Removed components job from github action

* :art: changelog

* Return components tests in github action

* change badge to travis

* return back github badge

* :art: review

* :art: changelog

* Apply suggestions from code review

Co-authored-by: Andrey Kobets <kobezzza@gmail.com>

Co-authored-by: Andrey Kobets <kobezzza@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,16 +2,16 @@ name: build
 
 on:
   push:
-    branches: [master, v3]
+    branches: [master]
 
   pull_request:
-    branches: [master, v3]
+    branches: [master]
 
 jobs:
 
   # Run components tests
   components:
-    runs-on: macos-latest
+    runs-on: windows-latest
 
     strategy:
       matrix:
