--- a/package.json
+++ b/package.json
@@ -122,7 +122,8 @@
     "vue-template-es2015-compiler": "^1.9.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "worker-loader": "^3.0.2"
+    "worker-loader": "^3.0.2",
+    "portfinder": "^1.0.28"
   },
   "devDependencies": {
     "@v4fire/linters": "^1.6.1",
