--- a/.tsconfig
+++ b/.tsconfig
@@ -1,3 +1,7 @@
 {
-  "extends": "@v4fire/core/.tsconfig"
+  "extends": "@v4fire/core/.tsconfig",
+  "compilerOptions": {
+    "module": "ES2020",
+    "moduleResolution": "node"
+  }
 }
