--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     }
   },
   "dependencies": {
-    "@v4fire/core": "^3.28.1",
+    "@v4fire/core": "^3.28.2",
     "escaper": "^3.0.4",
     "eventemitter2": "^6.4.3",
     "path-to-regexp": "^3.2.0",
@@ -68,7 +68,7 @@
     "delay": "^4.4.0",
     "extract-loader": "^5.1.0",
     "fast-css-loader": "^1.0.2",
-    "file-loader": "^6.1.0",
+    "file-loader": "^6.2.0",
     "fs-extra-promise": "^1.0.1",
     "glob": "^7.1.6",
     "glob-promise": "^3.4.0",
@@ -82,15 +82,14 @@
     "gulp-load-plugins": "^2.0.4",
     "gulp-plumber": "^1.2.1",
     "gulp-run": "^1.7.1",
-    "hard-source-webpack-plugin": "^0.13.1",
     "hash-files": "^1.1.1",
     "hasha": "^5.2.0",
-    "html-loader": "^1.3.0",
+    "html-loader": "^1.3.2",
     "image-webpack-loader": "^7.0.1",
     "imagemin-webp": "^6.0.0",
     "is-path-inside": "^3.0.2",
     "merge2": "^1.3.0",
-    "mini-css-extract-plugin": "^0.11.2",
+    "mini-css-extract-plugin": "^1.3.1",
     "monic": "^2.6.0",
     "monic-loader": "^3.0.1",
     "nib": "^1.1.2",
@@ -100,31 +99,31 @@
     "path-equal": "^1.1.1",
     "portfinder": "^1.0.28",
     "postcss": "^7.0.34",
-    "postcss-loader": "^4.0.2",
-    "raw-loader": "^4.0.1",
+    "postcss-loader": "^4.1.0",
+    "raw-loader": "^4.0.2",
     "snakeskin-loader": "^8.0.1",
     "ss2vue": "^1.1.0",
     "string-dasherize": "^1.0.0",
     "style-loader": "^2.0.0",
     "stylus": "^0.54.8",
-    "stylus-loader": "^3.0.2",
-    "svg-sprite-loader": "^5.0.0",
+    "stylus-loader": "^4.3.0",
+    "svg-sprite-loader": "kobezzza/svg-sprite-loader#add-support-webpack5",
     "svg-url-loader": "^6.0.0",
     "svgo": "^1.3.2",
     "svgo-loader": "^2.2.1",
     "svgo-sync": "^0.5.1",
-    "terser-webpack-plugin": "^4.2.2",
-    "ts-loader": "^8.0.4",
+    "terser-webpack-plugin": "^5.0.3",
+    "ts-loader": "^8.0.11",
     "typograf": "^6.11.1",
     "uniconf": "^2.1.1",
     "upath": "^1.2.0",
-    "url-loader": "^4.1.0",
+    "url-loader": "^4.1.1",
     "urlconcat": "0.0.12",
     "vue-template-compiler": "2.6.10",
     "vue-template-es2015-compiler": "^1.9.1",
-    "webpack": "^4.44.2",
+    "webpack": "^5.6.0",
     "webpack-cli": "^3.3.12",
-    "worker-loader": "^3.0.2"
+    "worker-loader": "^3.0.5"
   },
   "devDependencies": {
     "@v4fire/linters": "^1.6.1",
