Migration to simple-svg-sprite-loader

--- a/package.json
+++ b/package.json
@@ -101,13 +101,13 @@
     "postcss": "^7.0.34",
     "postcss-loader": "^4.1.0",
     "raw-loader": "^4.0.2",
+    "simple-svg-sprite-loader": "^1.0.8",
     "snakeskin-loader": "^8.0.1",
     "ss2vue": "^1.1.0",
     "string-dasherize": "^1.0.0",
     "style-loader": "^2.0.0",
     "stylus": "^0.54.8",
     "stylus-loader": "^4.3.0",
-    "svg-sprite-loader": "kobezzza/svg-sprite-loader#add-support-webpack5",
     "svg-url-loader": "^6.0.0",
     "svgo": "^1.3.2",
     "svgo-loader": "^2.2.1",
