--- a/package.json
+++ b/package.json
@@ -53,18 +53,18 @@
     "@pzlr/stylus-inheritance": "^3.1.0",
     "@types/fs-extra-promise": "^1.0.9",
     "@types/glob": "^7.1.3",
-    "@types/webpack": "^4.41.12",
+    "@types/webpack": "^4.41.25",
     "@v4fire/design-system": "^1.23.0",
-    "arg": "^4.1.3",
+    "arg": "^5.0.0",
     "autoprefixer": "^9.8.6",
-    "browserslist": "^4.14.3",
+    "browserslist": "^4.15.0",
     "buble": "^0.20.0",
     "camelize": "^1.0.0",
     "collection.js": "^6.7.10",
     "config": "^1.31.0",
     "copy-dir": "^1.3.0",
     "cssnano": "^4.1.10",
-    "del": "^5.1.0",
+    "del": "^6.0.0",
     "delay": "^4.4.0",
     "extract-loader": "^5.1.0",
     "fast-css-loader": "^1.0.2",
@@ -79,17 +79,17 @@
     "gulp-gzip": "^1.4.2",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^7.1.0",
-    "gulp-load-plugins": "^2.0.4",
+    "gulp-load-plugins": "^2.0.6",
     "gulp-plumber": "^1.2.1",
     "gulp-run": "^1.7.1",
     "hash-files": "^1.1.1",
-    "hasha": "^5.2.0",
+    "hasha": "^5.2.2",
     "html-loader": "^1.3.2",
     "image-webpack-loader": "^7.0.1",
     "imagemin-webp": "^6.0.0",
     "is-path-inside": "^3.0.2",
-    "merge2": "^1.3.0",
-    "mini-css-extract-plugin": "^1.3.1",
+    "merge2": "^1.4.1",
+    "mini-css-extract-plugin": "^1.3.2",
     "monic": "^2.6.0",
     "monic-loader": "^3.0.1",
     "nib": "^1.1.2",
@@ -98,16 +98,16 @@
     "parallel-webpack": "^2.6.0",
     "path-equal": "^1.1.1",
     "portfinder": "^1.0.28",
-    "postcss": "^7.0.34",
+    "postcss": "^7.0.35",
     "postcss-loader": "^4.1.0",
     "raw-loader": "^4.0.2",
-    "simple-svg-sprite-loader": "^1.0.8",
     "snakeskin-loader": "^8.0.1",
     "ss2vue": "^1.1.0",
     "string-dasherize": "^1.0.0",
     "style-loader": "^2.0.0",
     "stylus": "^0.54.8",
     "stylus-loader": "^4.3.0",
+    "svg-sprite-loader": "^5.1.1",
     "svg-url-loader": "^6.0.0",
     "svgo": "^1.3.2",
     "svgo-loader": "^2.2.1",
@@ -116,18 +116,18 @@
     "ts-loader": "^8.0.11",
     "typograf": "^6.11.1",
     "uniconf": "^2.1.1",
-    "upath": "^1.2.0",
+    "upath": "^2.0.1",
     "url-loader": "^4.1.1",
     "urlconcat": "0.0.12",
     "vue-template-compiler": "2.6.10",
     "vue-template-es2015-compiler": "^1.9.1",
-    "webpack": "^5.6.0",
+    "webpack": "^5.10.0",
     "webpack-cli": "^3.3.12",
-    "worker-loader": "^3.0.5"
+    "worker-loader": "^3.0.6"
   },
   "devDependencies": {
     "@v4fire/linters": "^1.6.1",
-    "husky": "^4.2.5",
+    "husky": "^4.3.5",
     "nyc": "^15.1.0",
     "playwright": "1.4.2"
   }
