--- a/package.json
+++ b/package.json
@@ -129,6 +129,6 @@
     "@v4fire/linters": "^1.6.1",
     "husky": "^4.3.7",
     "nyc": "^15.1.0",
-    "playwright": "1.4.2"
+    "playwright": "^1.7.1"
   }
 }
