--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "path-to-regexp": "^3.2.0",
     "requestidlecallback": "^0.3.0",
     "snakeskin": "^7.5.1",
+    "svg-transform-loader": "^2.0.13",
     "tslib": "2.0.1",
     "vue": "2.6.10"
   },
