--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "mini-css-extract-plugin": "^1.3.2",
     "monic": "^2.6.0",
     "monic-loader": "^3.0.1",
+    "nanoid": "^3.1.20",
     "nib": "^1.1.2",
     "node-static": "^0.7.11",
     "parallel-webpack": "^2.6.0",
