Issues/164 Icons colorizing (#485)
* :rocket: icon colorizing

* :art: stylus parseObject

* :art:

* :art:

* :art: stylus parseObject

* :art: stylus parseObject

* Formatting plugins improvements

* :art: optional params for i()

* :memo:

* :memo:

* Refactoring

* :art: code review

* :art: parseObject clones value

* :up: 3.0.0-rc.143

* :art: recursively cloning

Co-authored-by: kobezzza <kobezzza@gmail.com>

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/core/index.js",
   "typings": "index.d.ts",
   "license": "MIT",
-  "version": "3.0.0-rc.142",
+  "version": "3.0.0-rc.143",
   "author": {
     "name": "kobezzza",
     "email": "kobezzza@gmail.com",
@@ -45,6 +45,7 @@
     "path-to-regexp": "^3.2.0",
     "requestidlecallback": "^0.3.0",
     "snakeskin": "^7.5.1",
+    "svg-transform-loader": "^2.0.13",
     "tslib": "2.0.1",
     "vue": "2.6.10"
   },
