--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,6 +39,9 @@ jobs:
       - name: Build tsconfig
         run: npx gulp build:tsconfig
 
+      - name: Set PW Debug
+        run: export DEBUG=pw:api
+
       - name: Run components test
         run: npm run test:components
 
