--- a/package.json
+++ b/package.json
@@ -131,6 +131,6 @@
     "@v4fire/linters": "^1.6.1",
     "husky": "^4.3.8",
     "nyc": "^15.1.0",
-    "playwright": "^1.8.1"
+    "playwright": "1.6.0"
   }
 }
