--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test": "npm run test:typescript && npm run test:eslint && npm run test:components",
     "test:eslint": "npx eslint ./config/**/*.js ./build/**/*.js",
     "test:typescript": "node node_modules/@v4fire/typescript-check",
-    "test:components": "npx gulp test:components --test-processes 1 --browsers chromium",
+    "test:components": "npx gulp test:components --test-processes 2",
     "test:components:chrome": "npx gulp test:components --browsers chromium",
     "up": "npm i && npm up && npm audit fix"
   },
@@ -131,6 +131,6 @@
     "@v4fire/linters": "^1.6.1",
     "husky": "^4.3.8",
     "nyc": "^15.1.0",
-    "playwright": "1.6.0"
+    "playwright": "^1.8.1"
   }
 }
