--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,12 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Clear cache
+        run: rm -r app-cache
+
+      - name: Clear build
+        run: rm -r dist
+
       - name: Build tsconfig
         run: npx gulp build:tsconfig
 
