:art: changelog; Now tests executing only in chrome

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,7 @@ jobs:
         run: npx gulp build:tsconfig
 
       - name: Run components test
-        run: npm run test:components
+        run: npm run test:components:chrome
 
 
   # Run typescript check
