--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     }
   },
   "dependencies": {
-    "@v4fire/core": "^3.34.0",
+    "@pzlr/build-core": "file:.yalc/@pzlr/build-core",
+    "@v4fire/core": "^3.42.0",
     "escaper": "^3.0.4",
     "eventemitter2": "^6.4.4",
     "path-to-regexp": "^3.2.0",
@@ -51,7 +52,7 @@
     "vue": "2.6.10"
   },
   "optionalDependencies": {
-    "@pzlr/build-core": "^2.10.3",
+    "@pzlr/build-core": "github:pzlr/build-core#graph-caching",
     "@pzlr/stylus-inheritance": "^3.1.0",
     "@types/fs-extra-promise": "^1.0.9",
     "@types/glob": "^7.1.3",
@@ -132,6 +133,6 @@
     "@v4fire/linters": "^1.7.2",
     "husky": "^4.3.8",
     "nyc": "^15.1.0",
-    "playwright": "^1.9.1"
+    "playwright": "^1.10.0"
   }
 }
