--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/core/index.js",
   "typings": "index.d.ts",
   "license": "MIT",
-  "version": "3.0.0-rc.172",
+  "version": "3.0.0-rc.173",
   "author": {
     "name": "kobezzza",
     "email": "kobezzza@gmail.com",
@@ -51,7 +51,7 @@
     "vue": "2.6.10"
   },
   "optionalDependencies": {
-    "@pzlr/build-core": "github:pzlr/build-core#graph-caching",
+    "@pzlr/build-core": "^2.11.0",
     "@pzlr/stylus-inheritance": "^3.1.0",
     "@types/fs-extra-promise": "^1.0.9",
     "@types/glob": "^7.1.3",
