--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@v4fire/core": "^3.43.0",
     "escaper": "^3.0.4",
     "eventemitter2": "^6.4.4",
+    "jsdom": "^16.4.0",
     "path-to-regexp": "^3.2.0",
     "requestidlecallback": "^0.3.0",
     "snakeskin": "^7.5.1",
