--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test:eslint": "npx eslint ./config/**/*.js ./build/**/*.js",
     "test:typescript": "node node_modules/@v4fire/typescript-check",
     "test:components": "npx gulp test:components --test-processes 2",
-    "test:components:chrome": "npx gulp test:components --browsers chromium",
+    "test:components:chrome": "npx gulp test:components --browsers chromium --test-processes 2",
     "test:jasmine": "nyc --reporter=lcov --reporter=text npx jasmine",
     "up": "npm i && npm up && npm audit fix"
   },
