--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "dev": "gulp build:tsconfig && webpack --watch",
     "dev:file": "gulp build:tsconfig && webpack --watch --public-path",
     "test": "npm run test:typescript && npm run test:eslint && npm run test:components && npm run test:jasmine",
-    "test:eslint": "npx eslint ./config/**/*.js ./build/**/*.js",
+    "test:linters": "npm run test:typescript && npm run test:eslint",
     "test:typescript": "node node_modules/@v4fire/typescript-check",
+    "test:eslint": "npx eslint ./config/**/*.js ./build/**/*.js ./src/**/*.js ./src/**/*.ts",
     "test:components": "npx gulp test:components --test-processes 2",
     "test:components:chrome": "npx gulp test:components --browsers chromium --test-processes 2",
     "test:jasmine": "nyc --reporter=lcov --reporter=text npx jasmine",
