--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,6 @@ on:
     branches: [master]
 
 jobs:
-
   # Run components tests
   components:
     runs-on: windows-latest
@@ -76,15 +75,13 @@ jobs:
       - name: Run modules test
         run: npm run test:jasmine
 
-
-  # Run typescript check
-  typescript:
+  # Run linters
+  linters:
     runs-on: ubuntu-latest
-    timeout-minutes: 30
 
     strategy:
       matrix:
-        node-version: [14.1]
+        node-version: [ 14.x ]
 
     steps:
       - uses: actions/checkout@v2
@@ -94,54 +91,11 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - uses: actions/cache@v2
-
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
       - name: Install dependencies
         run: npm ci
 
       - name: Build tsconfig
         run: npx gulp build:tsconfig
 
-      #- name: Run typescript test
-      #  run: npm run test:typescript
-
-
-  # Run eslint check
-  eslint:
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-
-    strategy:
-      matrix:
-        node-version: [14.1]
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - uses: actions/cache@v2
-        id: cache
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build tsconfig
-        run: npx gulp build:tsconfig
-
-      - name: Run javascript test
-        run: npm run test:eslint
+      - name: Run tests
+        run: npm run test:linters
