--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
   "optionalDependencies": {
     "@pzlr/build-core": "^2.11.10",
     "@pzlr/stylus-inheritance": "^3.1.0",
-    "@types/fs-extra-promise": "^1.0.9",
     "@types/glob": "^7.1.3",
     "@types/webpack": "^5.28.0",
     "@v4fire/design-system": "^1.23.0",
@@ -66,11 +65,11 @@
     "css-minimizer-webpack-plugin": "^1.1.5",
     "cssnano": "^4.1.10",
     "del": "^6.0.0",
-    "delay": "^4.4.0",
+    "delay": "^5.0.0",
     "extract-loader": "^5.1.0",
     "fast-css-loader": "^1.0.2",
     "file-loader": "^6.2.0",
-    "fs-extra-promise": "^1.0.1",
+    "fs-extra": "^10.0.0",
     "glob": "^7.1.6",
     "glob-promise": "^3.4.0",
     "gulp": "^4.0.2",
@@ -129,7 +128,7 @@
   },
   "devDependencies": {
     "@v4fire/linters": "^1.7.3",
-    "husky": "^7.0.0",
+    "husky": "^7.0.1",
     "nyc": "^15.1.0",
     "playwright": "^1.12.3"
   }
