--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "up": "npm i && npm up && npm audit fix"
   },
   "dependencies": {
-    "@v4fire/core": "^3.54.3",
+    "@v4fire/core": "^3.54.4",
     "escaper": "^3.0.6",
     "eventemitter2": "^6.4.4",
     "jsdom": "^16.6.0",
@@ -127,6 +127,7 @@
     "worker-loader": "^3.0.7"
   },
   "devDependencies": {
+    "@types/jasmine": "^3.8.1",
     "@v4fire/linters": "^1.7.3",
     "husky": "^7.0.1",
     "nyc": "^15.1.0",
