--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "test:eslint": "npx eslint ./config/**/*.js ./build/**/*.js ./src/**/*.js ./src/**/*.ts",
     "test:components": "npx gulp test:components --test-processes 2",
     "test:components:chrome": "npx gulp test:components --browsers chromium --test-processes 2 --retries 2",
+    "test:components:ci": "npx gulp test:components --browsers chromium --test-processes 2 --retries 2; npx gulp test:components --browsers chromium --test-processes 2 --retries 2 --fat-html",
     "test:jasmine": "nyc --reporter=lcov --reporter=text npx jasmine",
     "up": "npm i && npm up && npm audit fix"
   },
