--- a/package.json
+++ b/package.json
@@ -30,10 +30,9 @@
     "test": "npm run test:typescript && npm run test:eslint && npm run test:components && npm run test:jasmine",
     "test:linters": "npm run test:typescript && npm run test:eslint",
     "test:typescript": "node node_modules/@v4fire/typescript-check",
-    "test:eslint": "npx eslint ./config/**/*.js ./build/**/*.js ./src/**/*.js ./src/**/*.ts",
-    "test:components": "npx gulp test:components --test-processes 2",
-    "test:components:chrome": "npx gulp test:components --browsers chromium --test-processes 2 --retries 2",
-    "test:components:ci": "npx gulp test:components --browsers chromium --test-processes 2 --retries 2; npx gulp test:components --browsers chromium --test-processes 2 --retries 2 --fat-html",
+    "test:eslint": "eslint ./config/**/*.js ./build/**/*.js ./src/**/*.js ./src/**/*.ts",
+    "test:components": "gulp test:components --test-processes 2",
+    "test:components:chrome": "npm run test:components --browsers chrome --retries 2",
     "test:jasmine": "nyc --reporter=lcov --reporter=text npx jasmine",
     "up": "npm i && npm up && npm audit fix"
   },
