feat: remove statoscopePlugin, added gulp task for transforming compilation-stats

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -109,7 +109,7 @@ jobs:
   modules:
     runs-on: ubuntu-latest
     env:
-      NODE_ENV: production
+      PROGRESS: false
 
     timeout-minutes: 30
 
