chore: moved to v4/core from npm

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "up": "npm i && npm up && npm audit fix"
   },
   "dependencies": {
-    "@v4fire/core": "github:v4fire/core#issues/244",
+    "@v4fire/core": "^3.71.0",
     "escaper": "^3.0.6",
     "eventemitter2": "^6.4.5",
     "jsdom": "^16.7.0",
